--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'//解决@Part 带了双引号的问题
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
+    implementation 'com.github.xunsky:PermissionUtilsRx:0.0.1'
 }
